--- a/style.css
+++ b/style.css
@@ -1,16 +1,42 @@
 body{
-background-color:#DD8C57;
+margin:0;    
+background-color:#C77448;
 }
 
 
-#wrapper{
-background-color:#DD8C57;
+/* #wrapper{
+background-color:#C77448;
+width:1200px;
+
+} */
+
+#header1{
+height:135px;
+background-color:#4F2222;
+position:relative;
+z-index:1;
 }
 
-#header{
-
+#logo{
+position:absolute;
+top:0;
+left:0;
 }
+
+#button{
+position:absolute;
+left:400px;
+top:120px;
+z-index:2;
+}
+
 
 #content{
+background-color:#C77448;
+padding:30px 100px;
+}
 
+#footer{
+height:135px;
+background-color:#4F2222;
 }
