--- a/types-of-coffee.css
+++ b/types-of-coffee.css
@@ -26,10 +26,10 @@ bottom:0;
 }
 
 #section{
-outline: 0 solid #FFFFFF;
+outline: 1px solid #FFFFFF;
 min-height: 100%;
 min-width: 80%;
-height: 1000px;
+height: 1700px;
 width: 800px;
 position: relative;
 top:0;
@@ -44,8 +44,8 @@ bottom:0;
 #asideL{
 min-height: 70%;
 min-width: 10%;
-height: 1000px;
-outline: 0 solid #cc0000;
+height: 1700px;
+outline: 1px solid #cc0000;
 position: absolute;
 top: 15%;
 left: 0;
@@ -56,8 +56,8 @@ bottom: 15%;
 #asideR{
 min-height: 70%; 
 min-width: 10%;
-height: 1000px;
-outline: 0 solid #cc0000;
+height: 1700px;
+outline: 1px solid #cc0000;
 position: absolute;
 top: 15%;
 right: 0;
@@ -75,33 +75,7 @@ bottom: 0;
 outline: 1px solid #FFFFFF;
 }
 
-
-#coffeehistory{
-position: absolute;
-top: 2%;
-left: 5%;
-}
-
-#facts{
-position: absolute;
-top: 2%;
-left: 50%;
-}
-
-#presents{
-position: absolute;
-top: 30%;
-left: 5%;    
-}
-
-#countries{
-position: absolute;
-top: 33%;
-left: 45%;    
-}
-
-#advantage{
-position: absolute;
-top: 65%;
-left: 20%;    
+#coffeedrinks{
+ float: left;
+ margin: 0 10px 10px 0;
 }
